fix vertical align center on navigation

--- a/css/index.css
+++ b/css/index.css
@@ -259,7 +259,7 @@ select {
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: center;
   padding: 15px 5%;
 }
 .nav-container .logo {
