--- a/less/navigation.less
+++ b/less/navigation.less
@@ -13,7 +13,7 @@
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: center;
     padding: 15px 5%;
   }
 
